--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -1,6 +1,14 @@
 name: allure-report
 
 on:
+  workflow_dispatch:
+    inputs:
+        logLevel:
+           description: 'Log level'     
+           required: true
+           default: 'warning'
+        tags:
+           description: 'Test scenario tags'
   release:
     types:
       - created
