--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -17,6 +17,19 @@ on:
       - '!master'
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
+        cache: 'npm'
+    - run: npm ci
+    - run: npm run test
+    
   allure:
     name: Generate Allure Report
     runs-on: ubuntu-latest
