--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -17,7 +17,20 @@ on:
       - '!master'
 
 jobs:
-  build:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Use Node.js
+#       uses: actions/setup-node@v2
+#       with:
+#         node-version: '14'
+#         cache: 'npm'
+#     - run: npm ci
+#     - run: npm run test
+    
+  allure:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,36 +42,36 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run test
-    
-  allure:
-    name: Generate Allure Report
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
 
-      - name: Get Allure history
-        uses: actions/checkout@v2
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
-    
-      - name: Allure Report action from marketplace
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        id: allure-report
-        with:
-          allure_results: my-allure-results
-          #gh_pages: gh-pages
-          allure_report: generated-allure-report
-          #allure_history: allure-history
-          #keep_reports: 20
+    - uses: actions/upload-artifact@master
+      with:
+        name: my-allure-results
+        path: my-allure-results
+        retention-days: 20
+        
+    - name: Get Allure history
+      uses: actions/checkout@v2
+      if: always()
+      continue-on-error: true
+      with:
+        ref: gh-pages
+        path: gh-pages
 
-      - name: Deploy report to Github Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+    - name: Allure Report action from marketplace
+      uses: simple-elf/allure-report-action@master
+      if: always()
+      id: allure-report
+      with:
+        allure_results: my-allure-results
+        #gh_pages: gh-pages
+        allure_report: generated-allure-report
+        #allure_history: allure-history
+        #keep_reports: 20
+
+    - name: Deploy report to Github Pages
+      if: always()
+      uses: peaceiris/actions-gh-pages@v2
+      env:
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: allure-history
