--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -17,19 +17,6 @@ on:
       - '!master'
 
 jobs:
-#   build:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Use Node.js
-#       uses: actions/setup-node@v2
-#       with:
-#         node-version: '14'
-#         cache: 'npm'
-#     - run: npm ci
-#     - run: npm run test
-    
   allure:
     runs-on: ubuntu-latest
 
@@ -41,6 +28,7 @@ jobs:
         node-version: '14'
         cache: 'npm'
     - run: npm ci
+    - run: npx playwright install --with-deps
     - run: npm run test
 
     - uses: actions/upload-artifact@master
