커스텀 탭 추가

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "test": "(npx playwright test || true)",
         "report": "allure generate my-allure-results -o my_generated_report --clean",
         "start": "allure open my_generated_report",
-        "o": "npm run test && npm run report && npm run start"
+        "o": "npm run test && npm run report && npm run start",
+        "script": "node ./script/test.ts"
     },
     "keywords": [],
     "author": "",
