--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -56,6 +56,14 @@ jobs:
         #allure_history: allure-history
         #keep_reports: 20
 
+    - name: Deploy report to Github Pages
+      if: always()
+      uses: peaceiris/actions-gh-pages@v2
+      env:
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: allure-history
+
     - name: copy customTab
       env:
           SRC_FOLDER_PATH: 'custom'
@@ -70,15 +78,7 @@ jobs:
           # git switch ${TARGET_BRANCH}
           git checkout ${ORIGIN_BRANCH} -- $files # copy files from the source branch
           ls -al
-          sudo cp -Rf custom/* generated-allure-report
+          sudo cp -Rf custom/* ${RUN}
           git add -A
           git diff-index --quiet HEAD ||  git commit -am "deploy files"  # commit to the repository (ignore if no modification)
           git push origin $TARGET_BRANCH # push to remote branch
-
-    - name: Deploy report to Github Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v2
-      env:
-        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-history
