--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -31,11 +31,11 @@ jobs:
     - run: npx playwright install --with-deps
     - run: npm run test
 
-    - uses: actions/upload-artifact@master
-      with:
-        name: my-allure-results
-        path: my-allure-results
-        retention-days: 20
+    #- uses: actions/upload-artifact@master
+    #  with:
+    #    name: my-allure-results
+    #    path: my-allure-results
+    #    retention-days: 20
         
     - name: Get Allure history
       uses: actions/checkout@v2
